--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Hipcamp Sample",
-  "name": "Hipcamp App Sample",
+  "short_name": "Campsite Sample",
+  "name": "Campsite App Sample",
   "icons": [
     {
       "src": "favicon.ico",
