--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "campsite-sample",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/localjo/campsite-example",
+  "homepage": "https://localjo.github.io/campsite-example",
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
